--- a/images/images.qrc
+++ b/images/images.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>logo.svg</file>
+        <file>enter-keyboard-shortcut.svg</file>
     </qresource>
 </RCC>
