新增 第一次启动显示帮助页面
新增第一次启动显示帮助页面

--- a/images/images.qrc
+++ b/images/images.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>logo.svg</file>
         <file>enter-keyboard-shortcut.svg</file>
+        <file>help.jpg</file>
     </qresource>
 </RCC>
